r253 (23. 07. 2024):
Added options "Show Floating Health Bars for Converts" and "Show Floating Health Bars for Civilians"
Breakin' Feds: Fixed excessive number of timers

r252 (16. 07. 2024):
Prison Nightmare: Fixed out of place waypoint
Prison Nightmare: Fixed excessive number of timers

r251 (10. 07. 2024):
Black Cat: Fixed a crash when money in the vault is destroyed

r250 (09. 07. 2024):
Added achievement progress filters in Achievement List Screen - "Tracked in EHI" and "The Secret"
Gage Package Tracker: Fixed for real current count is stuck at 0 (client only)
Zipline: Fixed an issue where time is not properly updated when a loot bag is "eaten" by ElementAreaTrigger

r249 (04. 07. 2024):
Biker Buff: Fixed an issue where the buff was no longer visible after getting out of custody and buff visibility is set to persistent
Gage Package Tracker: Possible fix for an issue where the current count is stuck at 0 (client only)
Improved compatibility with "Any Day Any Heist" mod
Infamy Pool: Improved the counter to show next available and count of passing maximum Infamy Pool XP
Further memory optimization by removing unused buff classes from the memory
Fixed an issue where option "Buff -> Stoic -> Applied damage over-time" has no effect

r248 (26. 06. 2024):
Enabled grouping for Ziplines; further improving memory consumption with 2 or more ziplines on the map
Bank Heist: Fixed a crash after securing bags or picking up small loot
Experience Tracker: Fixed an issue when you lost XP after picking up Gage package (visual; client only)
Civilian Counter: Fixed an issue when civilian is deleted by mission script and counter is showing negative value (client only)
Loot Counter: Fixed issues with counter getting stuck
Loot Counter: Improved mod compatibility that load heists that need an offset to stay accurate
Trade Delay Tracker: Fixed an issue where text can overflow in the panel

r247 (15. 06. 2024):
Fixed crashes related to achievement progress counters

r246 (14. 06. 2024):